<resources>
    <string name="app_name">UberApp_Tim26</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="email">E-mail:</string>
    <string name="phone">Phone number:</string>
    <string name="password">Password:</string>
    <string name="e_mail_example">username@hostname.extension</string>
    <string name="password_example">A–Z a–z 0–9 - _</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="profile_image">Profile Image</string>
    <string name="relation_a_to_b">Relation: A to B</string>
    <string name="milaege_km">Milaege:</string>
    <string name="price_price">Price: price</string>
    <string name="passengers_number">Passengers: number</string>
    <string name="duration_duration">Duration: duration</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="driver_full_name">Driver: Full Name</string>
    <string name="driver_is_inconsistent_report_him">Driver is inconsistent? Report him.</string>
    <string name="price_price2">Price: price</string>
    <string name="duration_duration2">Duration: duration</string>
    <string name="relation_a_to_b2">Relation: A to B</string>
    <string name="panic">PANIC</string>
    <string name="garigo">GariGo</string>
    <string name="password2">Password</string>
    <string name="username">Username:</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="or">OR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <string name="submit">Submit</string>
    <string name="name">Name:</string>
    <string name="changepassword">Change password</string>
    <string name="lastname">Last name:</string>
    <string name="address">Address:</string>
    <string name="oldpassword">Old password here</string>
    <string name="newpassword">New password here</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="favouriterides">Favourite rides</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="baby">Baby</string>
    <string name="pet">Pet</string>
    <string name="findride">Find ride</string>
    <string name="endride">End ride</string>
    <string name="cancelride">Cancel ride</string>
    <string name="inconsistency">Report inconsistency</string>
    <string name="driver">Your driver</string>
    <string name="namesurname">Name Lastname</string>
    <string name="location">Location Name Number, City</string>
    <string name="start">Start ride</string>
</resources>