<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30sp"
    android:background="@color/off_white">

    <RelativeLayout
        android:id="@+id/change_password_edit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:background="@color/white"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:hint="@string/oldpassword" />

        <EditText
            android:layout_marginTop="20sp"
            android:id="@+id/new_password"
            android:background="@color/white"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:inputType="textPassword"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:hint="@string/newpassword" />
    </RelativeLayout>
    <TextView
        android:id="@+id/errorChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_edit_form"
        android:text="@string/garigo"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"/>

    <RelativeLayout
        android:layout_below="@id/errorChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_toRightOf="@id/btn_ok"
                android:layout_marginLeft="10dp"
                android:background="@color/black"
                android:textColor="@color/white"
                />


            <Button
                android:id="@+id/btn_ok"
                android:background="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:text="@string/cancel" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>