<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DriverAcceptanceRideActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/citymap"
        android:id="@+id/mapdriver"
        />

    <RelativeLayout
        android:id="@+id/informations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapdriver"
        android:layout_centerHorizontal="true"
        >


        <TextView
            android:id="@+id/priceAcceptance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_price"
            android:textSize="18sp"
            />


        <TextView
            android:id="@+id/durationaAcceptance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_duration"
            android:textSize="18sp"
            android:layout_below="@id/priceAcceptance"/>

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/layoutbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/informations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endbtn"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:text="@string/endride"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/declinebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:text="@string/cancelride"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="315sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutbuttons"
        android:layout_centerHorizontal="true"
        android:text="@string/panic"
        android:textSize="18sp"
        android:padding="20dp"
        android:background="@color/red" />






</RelativeLayout>




