<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserLoginActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Welcome back!"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/off_white"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/off_white"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/forgotenpassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/password"
        android:text="@string/forgot_password"
        android:gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/off_white"
        android:padding="20dp"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerbtn"
        android:layout_below="@id/ortext"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/off_white"
        android:padding="20dp"
        android:text="@string/create_new_account"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ortext"
        android:text="@string/or"
        android:layout_below="@id/loginbtn"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>


</RelativeLayout>