<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PassengerAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarPassengerMain"
            android:layout_width="407dp"
            android:layout_height="74dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="1dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/passengerEmail"
        android:layout_width="294dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/textView4"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/passengerID"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passengerSurname"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/passengerSurname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passengerName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="" android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="172dp"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:layout_below="@id/appBar"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/passengerName"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_below="@+id/appBar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/driverPhone"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passengerEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="21dp"
        android:layout_toEndOf="@+id/textView5"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/phone"
        android:textAlignment="textStart"
        android:textSize="20dp"
        android:textStyle="bold" />


</RelativeLayout>